--- a/css/custom.css
+++ b/css/custom.css
@@ -1611,19 +1611,7 @@ img.emoji {
     }
 }
 
-/* Cart Dropdown Arrow/Triangle */
-.top_panel_middle .sidebar_cart::after {
-    content: '';
-    position: absolute;
-    top: -10px;
-    right: 40px;
-    width: 0;
-    height: 0;
-    border-left: 12px solid transparent;
-    border-right: 12px solid transparent;
-    border-bottom: 12px solid #FEC321;
-    filter: drop-shadow(0 -2px 4px rgba(0, 0, 0, 0.1));
-}
+/* Cart Dropdown Arrow/Triangle - REMOVED */
 
 /* Make sure buttons have text properly wrapped */
 .checkout-button {
