--- a/css/style.css
+++ b/css/style.css
@@ -3537,7 +3537,7 @@ body:not(.top_panel_fixed) .top_panel_position_over .top_panel_bottom {
 }
 .logo img {
 	float:left;
-	margin: 0;
+	margin: 0 52px 0 -45px;
 	width: auto;
 	height: 80px;
 }
@@ -7116,7 +7116,7 @@ footer .footer_wrap_inner .content_wrap {
     overflow: hidden;
 }
 footer .logo {
-    margin: 0.5em 0 0 0.3em;
+    margin: -0.5em 0 0 7.3em;
 }
 
 .call_wrap_inner .content_wrap {
@@ -7138,7 +7138,7 @@ footer .logo {
 }
 .call_wrap_inner .call-title {
     float: left;
-    margin:  0;
+    margin:  16px;
     max-width: 380px;
 }
 
