--- a/css/custom.css
+++ b/css/custom.css
@@ -917,7 +917,7 @@ img.emoji {
 
 /* for shop page */
 .bg_cust_7 {
-	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/EH7NJI6XDBIBHDJ64ECG7QAOUY.jpg);
+	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/contact_bg.png);
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
